# skate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: basic.sh  with_judge.sh  with_scoring.sh
skate/: config.py  exporter.py  judge.py  models.py  renderer.py  runner.py  scorer.py
skate/cli/: main.py
skate/providers/: anthropic.py  base.py  gemini.py  ollama.py  openai.py
tests/: test_judge.py  test_providers.py  test_runner.py  test_scorer.py
